@@ -12,13 +12,6 @@
 <td align="center" bgcolor="#7962FF" width="150">
 <center>
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="170">
-<tr height="40">
-<td align="center" width="160" bgcolor="#7962FF" height="30">
-<font face="Arial,helvetica,geneva,sans-serif,lucida" size="-1">
-<a href="http://kinux.sarang.net/glade">Korea</a>
-</font>
-</td>						
-</tr>
 <tr height="43">
 <td align="center" width="160" bgcolor="#7962FF" height="43"><center>
 <table cellspacing="4" cellpadding="0" border="0" width="100%" height="40">
