@@ -1,6 +1,7 @@
 2004-01-26  Damon Chaplin  <damon@gnome.org>
 
 	* index.html: added link to new Win32 port.
+	removed Korea link since it isn't there any more.
 
 2004-01-14  Damon Chaplin  <damon@gnome.org>
 
